deploy/04_operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configure-alertmanager-operator
  namespace: openshift-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      name: configure-alertmanager-operator
  template:
    metadata:
      labels:
        name: configure-alertmanager-operator
      annotations:
        openshift.io/required-scc: restricted-v2
    spec:
      serviceAccountName: configure-alertmanager-operator
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/infra
                operator: Exists
            weight: 1
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/infra
          operator: Exists
      containers:
        - name: configure-alertmanager-operator
          image: quay.io/redhat-services-prod/camo-hcm-tenant/configure-alertmanager-operator-master/configure-alertmanager-operator-master@sha256:3cac86018f0930a5e9b25ee15b2592d528cdb7c825e9c329a3eec5bacb798ce9
          command:
          - configure-alertmanager-operator
          imagePullPolicy: Always
