deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configure-alertmanager-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: configure-alertmanager-operator
  template:
    metadata:
      labels:
        name: configure-alertmanager-operator
    spec:
      serviceAccountName: configure-alertmanager-operator
      containers:
        - name: configure-alertmanager-operator
          # Replace this with the built image name
          image: REPLACE_IMAGE
          command:
          - configure-alertmanager-operator
          imagePullPolicy: Always
